styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    /* border: 1px solid; */
}

:root {
    --brightGreen: #5cdb95;
    --dullGreen: #8ee4af;
    --darkGreen: #379683;
    --whiteish: #edf5e1;
    --darkBlue: #05386b;
}

body {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100%;
    background-color: var(--darkGreen);
    color: black;
    font-family: r;
}

.box {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    border-radius: 20px;
    background-color: var(--dullGreen);
}

.container {
    display: grid;
    height: 98vh;
    width: 98%;
    grid-template-columns: 2fr 5fr 3fr;
    grid-template-rows: 1fr 2fr 2fr;
    border: 2px solid var(--whiteish);
    border-radius: 20px;
    background-color: var(--dullGreen);
}

.left-section {
    grid-column: 1 / 2;
    grid-row: 2 / 4;
    display: flex;
    flex-direction: column;
    max-width: 250px;
    color: black;
}

.search-section {
    grid-column: 1 / 4;
    grid-row: 1 / 2;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.projects-section {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    border-bottom: 2px solid var(--whiteish);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
}

.dates-section {
    grid-column: 2 / 3;
    grid-row: 3 / 4;
}

.side-bar-right {
    grid-column: 3 / 4;
    grid-row: 2 / 4;
    border-left: 2px solid var(--whiteish);
}

/* Section Left */

.dashboard-nav {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    height: 100%;
    max-height: 800px;    
}

.nav-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 10px 0;
}

.nav-container img {
    height: 32px;
}

.nav-container p {
    margin-left: 20px;
    font-weight: 600;
    font-size: 1.5rem;
}

.home-nav {
    border-bottom: 3px solid;
}

.github {
    height: 100%;
    display: flex;
    align-items:flex-end;
    justify-content: center;
    margin-bottom: 20%;
}

.git-image {
    max-height: 100px
}

/* Search Box Section */

.dashboard-name {
    font-weight: 900;
    font-size: 2.5rem;
    margin: 0 5%;
}

.dashboard-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.search-box {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 10px 150px 10px 20px;
    background-color: #a2e7bc;
    border-radius: 20px;
}

.search-box img {
    height: 24px;
    margin-right: 20px;
}

.search-box p {
    font-size: 1.2rem;
}

.profile {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.language {
    display: flex;
    align-items: center;
    margin-right: 10%;
}

.language p {
    font-size: 1.4rem;
    margin-right: 20%;
}

.language img {
    height: 18px;
}

.notification-img {
    height: 28px;
    margin-left: 20px;
}

.profile-img {
    height: 64px;
    border-radius: 50%;
    margin-right: 40px;
    margin-left: 50px;
}

/* Projects Section */

.projects-title {
    font-size: 2rem;
}

.project-likes {
    font-size: 1rem;
    display: flex;
}

.project-likes p {
    margin: 5px 20px 5px 0;
}

.project-list {
    font-size: 1rem;
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 100%;
}

.project-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

